--- a/docs/01/S01.01.intro.md
+++ b/docs/01/S01.01.intro.md
@@ -7,7 +7,7 @@ Bienvenue
 
 ## Le discord
 
-Connectez-vous au discord dans le channel  ynov-docker : [https://discord.gg/yh2cr4UF7y](https://discord.gg/yh2cr4UF7y)
+Connectez-vous au discord dans le channel ynov-docker : [https://discord.gg/yh2cr4UF7y](https://discord.gg/yh2cr4UF7y)
 
 ## Le github
 
@@ -46,6 +46,19 @@ Questions, commentaires à [alexis.perrier@ynov.com](mailto:alexis.perrier@ynov.
 * Un projet final en classe lors de la dernière après midi.
 
 La note finale sera composée de 50% (les 2 meilleures notes de TD) + 50% (le projet final)
+
+## Comment organiser votre travail
+
+Creez un repertoire unique pour le cours
+\ynov-docker
+dedans
+* clonez la repo
+* creez des folders pour
+* les pdf,
+* votre code
+* la data
+
+Ca doit ressembler a ça
 
 ## Scope du cours
 
