--- a/docs/01/S01.02.pourquoi-docker.md
+++ b/docs/01/S01.02.pourquoi-docker.md
@@ -168,6 +168,31 @@ du Docker registry hub
 
 ![Registry, images and containers](./../../img/registry-images-containers.png)
 
+### Histoire
+
+Eleven years ago, Solomon Hykes walked onto the stage at PyCon 2013 and revealed Docker to the world for the first time. The problem Docker was looking to solve? “Shipping code to the server is hard.”
+
+Mar 21, 2024
+<https://www.docker.com/blog/docker-11-year-anniversary/>
+
+Ranked #1 “most-wanted” tool/platform by Stack Overflow’s developer community for the past four years
+26 million monthly active IPs accessing 15 million repos on Docker Hub, pulling them 25 billion times per month
+17 million registered developers
+
+La version commerciale de dockers date de 2014. il y a 10 ans. créee par Solomon Hykes
+<https://www.zdnet.com/article/docker-1-0-brings-container-technology-to-the-enterprise/>
+
+<https://medium.com/datadriveninvestor/docker-f0b8df21f003>
+
+depuis plus de 40 milliards
+
+Le premier blog post
+juillet 2013
+<https://www.docker.com/blog/how-to-use-your-own-registry/>
+celui d'apres
+avec le meme
+<https://www.docker.com/blog/docker-can-now-run-within-docker/>
+
 ## Liens et lectures
 
 - <https://docs.docker.com/get-started/docker-overview/>
