--- a/docs/01/S01.04.premiers-pas-docker.md
+++ b/docs/01/S01.04.premiers-pas-docker.md
@@ -109,7 +109,7 @@ et la commande
 docker run -d -p 8080:80 docker/welcome-to-docker
 ```
 
-qui se décompose de la facon suivante:
+qui se décompose de la façon suivante:
 
 - ```docker run``` : executer une image ou un container
 - ```-d``` : mode detaché (le terminal revient disponible après )
