--- a/docs/02/S02.02.docker-linux.md
+++ b/docs/02/S02.02.docker-linux.md
@@ -5,34 +5,36 @@ Dans ce document
 - lancer un container avec une distribution Ubuntu ou Alpine
 - Linux 101
 
-## Linux Ubuntu
+## Linux Alpine
 
 Linux existe en beaucoup de versions. La plus commune est Ubuntu.
 
-## pull Alpine from the CLI
+Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian. 
 
-Alpine est une version plus legere de Linux que Ubuntu
+On va utiliser une distribution de taille faible appelé Alpine plutot que Ubuntu qui est plus grosse. 
+Pour nos besoins cela sera amplement suffisant.
 
-Beaucoup des images python et autres sont construitres a partir de Alpine
+Beaucoup des images python et autres sont construites a partir de Alpine
 
 Dans un terminal
 
 ```bash
-docker run -i -t alpine /bin/bash
+docker run -i -t ubuntu /bin/bash
 ```
 
-what happens?
+Qu'observe t on ?
 
-docker
+Docker
 
-- pull the ubuntu image
-- creates a container
-- a network interface to connect to it (assigning an IP address to the container)
-- starts the container and executes /bin/bash
+- ne trouve pas l'image de Ubuntu locallement il va donc la recupèrer sur un repository
+- Il crée un container
+- le démarre et execute: /bin/bash
 
-et voila vous avez ubuntu sur votre machine
+on voir donc le prompt par défaut sur une distribution Ubuntu
 
-> command pour verifier la version de ubuntu
+
+
+> commande pour verifier la version de ubuntu
 
 ```bash
 apt-get update && apt-get install -y lsb-release
@@ -49,82 +51,87 @@ Release: 24.04
 Codename: noble
 ```
 
-pour sortir
+On a donc installé la version 24.04 de Ubuntu. Par défaut docker va recuperer la derniere version d'une image (tag: latest)
+
+pour sortir du container
 
 ```bash
 exit
 ```
 
-the container stops but isn't removed. You can start it again or remove it.
+Le container est stoppé mais existse toujours. il n'est pas supprimé.
+On peut le redemmarer avec la meme commande
+si vous runnez 
+```bash 
+docker run -i -t ubuntu /bin/bash
+``` 
+à nouveau, vous etes instantanement dans ubuntu
 
-si vous runnez ```docker run -i -t ubuntu /bin/bash``` à nouveau vous etes instantanement dans ubuntu
+De meme vous pouvez acceder au container dans **Docker Desktop**
+Cliquez sur le nom du container et le tab terminal
 
-De meme vous pouvez acceder au container dans Docker Desktop
-cliquez sur le nom du container et le tab terminal
+
 
 ### Les flags -i et -t
 
-The flags -i and -t in the Docker run command serve specific purposes:
+On a utilisé 2 flags -i -t
 
--i (Interactive):
+```bash
+docker run --help
+```
+donne les infos
 
-Keeps STDIN open even if not attached
-Allows you to interact with the container's shell
+* ```-t, --tty: Allocate a pseudo-TTY```
+le flag `-t` ou `--tty` simule un terminal interactif (`tty`) dans le conteneur.
+* ```  -i, --interactive: Keep STDIN open even if not attached```
+Le flag `-i` (ou `--interactive`) force Docker à garder le **STDIN** (Standard Input) ouvert même quand le conteneur n'est pas attaché à un terminal interactif.
 
--t (TTY):
+Les 2 flags sont souvent utilisés ensemble.
 
-Allocates a pseudo-TTY (terminal)
-Provides a terminal driver, enabling a more functional, interactive shell experience
+Si on oublie les 2 flasg 
 
-When used together, -i -t (often combined as -it) allows you to:
+```bash
+docker run ubuntu /bin/bash
+```
+le container est executé mais on y a pas acces
 
-Create an interactive shell session within the container
-Have a fully functional terminal experience, including features like command history and line editing
+avec seulement -i 
+le terminal ne redonne pas la main
 
-This combination is commonly used when you want to run a container and immediately interact with its shell, as in your example where you're launching a bash shell in an Ubuntu container.
+et avec seulement -t: le terminal reste accessible avec le prompt de ubuntu
 
-essayer
+Une fois dans le terminal ubuntu 
 
-```docker run ubuntu /bin/bash```
-et avec ou sans -i et -t
+* `pwd` donne le path du working directory. le director courant
+* `ls` liste les directlry et ficheirs. essayer aussi `ls -al`
 
-## Linux
 
-Linux - crash course
 
-### distros
+### executer une commande sur un container qui tourne
 
-Ubuntu
-Debian
-Redhat
-...
+On peut aussi passer une commande au bash de ubtuntu sans le faire manuellement
 
-## why linux rules the world ?
+```bash
+docker run ubuntu /bin/bash <commande>
+```
 
-so is docker always running linux OS ?
-No you can also run other OSs :
+par exemple
 
-## crash course into linux
+```bash
+docker run ubuntu /bin/bash -c pwd
+```
 
-how to on the command line
-bash vs dos
-permissions: chmod
-sudo ...
-top
+ou 
+```bash
+docker run ubuntu /bin/bash -c ls
+```
 
-- vim !!
+### En résumé
 
-### CLI and flags
+* facile de lancer un container ubuntu et d'acceder au terminal interne au container soit avec desktop, soit avec les fflags `-it`
 
-help page
+* `docker <command> --help` permet d'avoir la liste des flags que l'on peut utiliser pour la commande
 
-### Install stuff on debian / ubuntu
 
-sudo apt get
-apt get update
 
-exemple install git on ubuntu
 
-start ubtunu docekr
-get in the terminal
-run ... install git commands
