--- a/docs/02/S02.02.docker-linux.md
+++ b/docs/02/S02.02.docker-linux.md
@@ -11,10 +11,7 @@ Linux existe en beaucoup de versions. La plus commune est Ubuntu.
 
 Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian. 
 
-On va utiliser une distribution de taille faible appelé Alpine plutot que Ubuntu qui est plus grosse. 
-Pour nos besoins cela sera amplement suffisant.
-
-Beaucoup des images python et autres sont construites a partir de Alpine
+On va utiliser la plus classique, Ubuntu.
 
 Dans un terminal
 
@@ -22,26 +19,37 @@ Dans un terminal
 docker run -i -t ubuntu /bin/bash
 ```
 
+[TODO] Expliquer la syntaxe de la commande
+
 Qu'observe t on ?
 
-Docker
+Docker:
 
-- ne trouve pas l'image de Ubuntu locallement il va donc la recupèrer sur un repository
+- ne trouve pas l'image de Ubuntu locallement, il va donc la recupèrer sur un repository
 - Il crée un container
 - le démarre et execute: /bin/bash
 
-on voir donc le prompt par défaut sur une distribution Ubuntu
-
-
-
-> commande pour verifier la version de ubuntu
+Si tout fonctionne bien 
+on voit le prompt par défaut sur une distribution Ubuntu:
 
 ```bash
+root@45f1bbf4d38d:/#
+```
+Le prompt est de la forme user@containerid:<current working directory>#
+
+Notez que le user ici est **root**. 
+
+
+Verifions la version de l'OS avec  ```lsb_release``` 
+
+```bash
+# On doit d'abord installer lsb-release
 apt-get update && apt-get install -y lsb-release
+# pour pouvoir l'executer
 lsb_release -a
 ```
 
-devrait retourner
+Cette commande retourne un résultat similaire à:
 
 ```bash
 No LSB modules are available.
@@ -51,68 +59,114 @@ Release: 24.04
 Codename: noble
 ```
 
-On a donc installé la version 24.04 de Ubuntu. Par défaut docker va recuperer la derniere version d'une image (tag: latest)
+On a donc installé la version 24.04 de Ubuntu. 
+Par défaut docker va recuperer la derniere version d'une image (tag: latest)
 
-pour sortir du container
+Pour sortir du container
 
 ```bash
 exit
 ```
 
-Le container est stoppé mais existse toujours. il n'est pas supprimé.
-On peut le redemmarer avec la meme commande
-si vous runnez 
-```bash 
-docker run -i -t ubuntu /bin/bash
-``` 
-à nouveau, vous etes instantanement dans ubuntu
+Le container est stoppé mais il existe toujours. Il n'a pas été supprimé.
 
-De meme vous pouvez acceder au container dans **Docker Desktop**
+On peut le verifier avec ```docker ps -all```
+
+```bash
+CONTAINER ID   IMAGE              COMMAND                  CREATED        STATUS                     PORTS     NAMES
+45f1bbf4d38d   ubuntu             "/bin/bash"              21 hours ago   Exited (0) 2 seconds ago             awesome_hypatia
+```
+
+Le status est : **Exited (0) 2 seconds ago**
+
+On peut rédemarer le container avec la commande
+```bash 
+docker start 45f1bbf4d38d
+``` 
+
+le STATUS devient: **Up 2 seconds**.
+
+Et pour retourner dans la  session ubuntu on utilise la commande ```attach```:
+
+```bash
+docker attach 45f1bbf4d38d
+```
+
+On est à nouveau dans la session Ubuntu
+
+
+### Docker Desktop
+Vous pouvez acceder au container dans **Docker Desktop**
 Cliquez sur le nom du container et le tab terminal
 
+![](./../../img/docker-desktop-terminal.png)
 
 
 ### Les flags -i et -t
 
-On a utilisé 2 flags -i -t
+On a utilisé 2 flags ```-i -t```
 
+Le help donne les infos
 ```bash
 docker run --help
 ```
-donne les infos
 
 * ```-t, --tty: Allocate a pseudo-TTY```
-le flag `-t` ou `--tty` simule un terminal interactif (`tty`) dans le conteneur.
+le flag `-t` ou `--tty` simule un **terminal interactif** (`tty`) dans le conteneur.
 * ```  -i, --interactive: Keep STDIN open even if not attached```
-Le flag `-i` (ou `--interactive`) force Docker à garder le **STDIN** (Standard Input) ouvert même quand le conteneur n'est pas attaché à un terminal interactif.
+Le flag `-i` (ou `--interactive`) force Docker à garder le **STDIN** (Standard Input) ouvert 
+même quand le conteneur n'est pas attaché à un **terminal interactif**.
 
 Les 2 flags sont souvent utilisés ensemble.
 
-Si on oublie les 2 flasg 
+Si on oublie l'un ou l'autre des 2 flags
 
 ```bash
 docker run ubuntu /bin/bash
 ```
-le container est executé mais on y a pas acces
+Le container est executé mais on y a pas acces dans le même terminal. 
+(on peut passer par Docker Desktop) 
 
-avec seulement -i 
+* avec seulement -i 
 le terminal ne redonne pas la main
 
-et avec seulement -t: le terminal reste accessible avec le prompt de ubuntu
+* avec seulement -t: le terminal reste accessible avec le prompt de ubuntu
 
-Une fois dans le terminal ubuntu 
+[TODO] Pourquoi on peut seulement utiliser -t
 
-* `pwd` donne le path du working directory. le director courant
-* `ls` liste les directlry et ficheirs. essayer aussi `ls -al`
+
+
+Une fois dans la session ubuntu:
+
+* `pwd` donne le path du working directory. le directory courant
+* `ls` liste les directlry et ficheirs. Essayez aussi `ls -al` et ```ll```
+
+## Le mode detached
+
+
+Detached mode (-d flag):
+
+The container runs in the background
+You get your terminal prompt back immediately
+Output from the container isn't displayed in your current terminal
+
+
+Foreground mode (default, without -d):
+
+The container runs in the foreground
+Your terminal is attached to the container's standard input, output, and error
+You see the output in real-time, but your terminal is occupied
+
+
 
 
 
 ### executer une commande sur un container qui tourne
 
-On peut aussi passer une commande au bash de ubtuntu sans le faire manuellement
+On peut aussi passer une commande au ```bash``` de Ubuntu sans le faire manuellement dans le terminal du container.
 
 ```bash
-docker run ubuntu /bin/bash <commande>
+docker run ubuntu /bin/bash -c <commande>
 ```
 
 par exemple
@@ -128,9 +182,15 @@ docker run ubuntu /bin/bash -c ls
 
 ### En résumé
 
-* facile de lancer un container ubuntu et d'acceder au terminal interne au container soit avec desktop, soit avec les fflags `-it`
-
+* Il est facile de lancer un container ubuntu avec docker run
+* et d'acceder au terminal interne du container soit avec desktop, soit avec les flags `-it`
 * `docker <command> --help` permet d'avoir la liste des flags que l'on peut utiliser pour la commande
+* les commandes suivantes seront utiles
+  * docker run -it 
+  * docker start | stop
+  * docker attach
+  * docker ps | docker ps -a
+  * docker images
 
 
 
