--- a/docs/02/S02.03.linux.md
+++ b/docs/02/S02.03.linux.md
@@ -2,39 +2,64 @@
 
 Linux - crash course
 
-### why linux rules the world ?
+### Linux rules the world 
 
-so is docker always running linux OS ?
-No you can also run other OSs :
+- Parce que Docker est construit sur linux
+- Les 2 tiers ou plus des serveurs web sont du Linux 
+- La majorité des images docker sont construites sur une image de base linux
+
+Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian
+
+![](./../../img/Tux.svg.png)
+
+Linux c'est 
+- internet
+- les mobiles (android est du linux)
+- la science : NASA, ESA, CERN, Super computers etc 
+- [Tesla](https://rechargd.com/tesla-operating-system/) tourne sur une version propre de Linux
+
+la liste est longue
 
 ### distros
 
-plus de 600 distributions!
+plus de 600 distributions! appelées distro
 
 * Ubuntu
 * Debian
 * Redhat
+* Kali, Fedora, Suse, Alpine, Black Arch, ... 
 
-A linux distro 
-is an operating system based on the Linux kernel. It includes the Linux kernel, system libraries, utilities, and software packages bundled together to create a fully functional operating system. A Linux distro typically combines:
+Une distribution linux 
+est un OS (operating system) construit sur le noyau linux.
 
-- Linux Kernel: The core of the operating system, which manages system resources and allows communication between hardware and software.
-- GNU Tools: These are essential tools and libraries that make the system usable (often referred to as the GNU/Linux system).
-- Package Manager: A system that helps install, update, and manage software packages (e.g., apt for Debian/Ubuntu, dnf for Fedora, pacman for Arch).
-- Desktop Environment (optional): A graphical user interface like GNOME, KDE, or Xfce, though some distros are minimal and offer only a command-line interface.
-- Pre-installed Software: Various applications, like web browsers, text editors, and multimedia tools, that make the system ready for use.
+Une Linux distro contient générallement:
+- Le noyau linux: 
+
+- **Linux Kernel** : Le cœur du système d'exploitation, qui gère les ressources du système et permet la communication entre le matériel et les logiciels.
+- **GNU Tools** : Ce sont des outils et bibliothèques essentiels qui rendent le système utilisable (souvent appelé système GNU/Linux).
+- **Package Manager** : Un système qui aide à installer, mettre à jour et gérer les paquets logiciels (par exemple, apt pour Debian/Ubuntu, dnf pour Fedora, pacman pour Arch).
+- **Desktop Environment** (optionnel) : Une interface graphique comme GNOME, KDE ou Xfce, bien que certaines distributions soient minimales et n'offrent qu'une interface en ligne de commande.
+- **Pre-installed Software** : Diverses applications, comme les navigateurs web, éditeurs de texte et outils multimédia, qui rendent le système prêt à l'emploi.
 
 ### Histoire
 
 ![](./../../img/what-are-clouds-made-of.png)
 
-<https://fr.wikipedia.org/wiki/Linux>
+
+* 1991 [Linus Torvalds](https://fr.wikipedia.org/wiki/Linus_Torvalds), étudiant à l'université d'Helsinki, crée le Noyau Linux. (Il a aussi crée Git)
+
+![](./../../img/Linus_Torvalds.jpeg)
+
+Lire :
+* <https://fr.wikipedia.org/wiki/Linux>
+* <https://en.wikipedia.org/wiki/History_of_Linux>
 
 
 ## Linux Basics Workshop for Docker Course
 
 Nous avons donc accés a un container Linux :) 
-que pouvons nous faire et comment ca marche.
+
+Que pouvons nous faire et comment ca marche ?
 
 Dans la suite de ce document on va 
 
@@ -44,24 +69,23 @@ Dans la suite de ce document on va
     - Voir et editer les fichiers textes
     - Modifier les permissions et accès d'un fichier
     - installer des programmes avec le package manager
-    - observer et manager les process
-    - travailler sur les variables d'environnement
-    - aborder les aspect réseaux
-    - configurer un server web nginx
+    - observer les process
+    - et configurer un server web nginx
     
+Let's go!
 
-## 1. Introduction to the Linux Terminal (15 minutes)
+## 1. Commandes de base Linux 
 
-Commencons par supprimer tous les containers que nous avons pu creer
+Commencons par supprimer tous les containers que nous avons pu créer
 
 Dans Docker Desktop > containers 
 - selectionnez tout
 - cliquez sur le bouton stop 
 - et supprimez tous les containers
 
-La commande `docker ps -all` ne doit retourner aucune ligne
+La commande `docker ps -all` ne doit retourner aucune ligne.
 
-Dans un terminal powershell ou iTerm lancez le container ubuntu avec 
+Dans un terminal powershell ou iTerm créez et lancez un container ubuntu avec 
 
 ```bash
 docker run -it ubuntu /bin/bash
@@ -69,7 +93,7 @@ docker run -it ubuntu /bin/bash
 
 ### sortir et revenir dans le container
 
-Si on sort u container `exit`, le container existe toujours et continue a tourner. 
+Si on sort du container avec `exit`, le container existe toujours mais ne tourne plus. 
 
 On peut le voir: `docker ps`  liste bien le container avec comme status **UP** .
 Si le container etait stoppé, `docker ps -all` donnerait un status : "Exited"
@@ -78,68 +102,93 @@ Si le container etait stoppé, `docker ps -all` donnerait un status : "Exited"
 La commande `docker run -it ubuntu /bin/bash` va creer un nouveau container. Ce n'est pas ce que l'on souhaite. 
 On souhaite se réattacher au container existant.
 
-On trouve l'ID du container avec `docker ps`. ici 45f1bbf4d38d
+On trouve l'ID du container avec `docker ps`. ici ```45f1bbf4d38d```
 
 ![](./../../img/docker-ps.png)
 
-on se ré-attache au container avec 
+On se _reconnecte_ au container avec :
 
-
-```
+```bash
 docker exec -it <container ID> /bin/bash
 ```
-et on retrouve le prompt de la session Ubuntu.
+
+
+Note: On peut aussi d'abord redémarrer le container puis s'y attacher
+
+```bash
+docker start <container ID> 
+docker attach <container ID> 
+```
+
+Dans les 2 cas, on retrouve le prompt de la session Ubuntu.
 
 ```bash
 root@45f1bbf4d38d:/#
 ```
 
-Les repertoires d'une repo linux 
-https://linux101.hashnode.dev/linux-directory-structure
+l'architecture des répertoires d'une repo linux est stable pour toute les distro linux. 
 
-## 2. File System Navigation (20 minutes)
+Je vous laisse lire la signification et le role de chaque repertoire.
 
-Notez qu'on est loggué comme root 
-Un utilisateur ubuntu par defaut a ete crree
-on peut asse de root a ubuntu avec 
+<https://en.wikipedia.org/wiki/Unix_filesystem#Conventional_directory_layout>
 
+![](./../../img/standard-unix-filesystem-hierarchy-1.png)
+or as webp
+![](./../../img/standard-unix-filesystem-hierarchy-1.webp)
+
+## 2. File System Navigation 
+
+### user et super user
+
+Notez que vous etes loggué comme root 
+
+```bash
+root@45f1bbf4d38d:/#
+```
+
+Root est le super user. Il peut tout faire. 
+Il peut même supprimer tout avec la fameuse commande 
+```bash
+rm -rf /
+```
+**Attention a ne jamais executer cette commande!**
+
+Normallement on ne travaille jamais sur le compte root. Jamais.
+
+Mais comme notre container Ubuntu n'a pas pour vocation d'avoir des utilisateurs externes, nous allons exceptionnellement travailler en tant que root.
+
+Un utilisateur ubuntu  a ete crée
+on peut se connecter avec le user ubuntu avec 
+
+se connecter avec le user ubuntu
+```bash
 su - ubuntu
-
-il ne faut jamais travailler en tant que root
-
-on aurait pu edmarrer le contaner en specifiant l'utilisateur
-docker run -it --user ubuntu ubuntu /bin/bash
-
-Pour se depalcer dans les repertoires on utilise les commandes 
-
-- pwd: path to working directory: le repertoire courant 
-- ls: list les fichiers. Utile avec les flags -al et -alh
-- cd: change directory  
-
-Contrairement a windows et mac ou on peut tout faire il y a ddes regles a respecter dans le nomage des fochoers et repertoire
-
-- Case sensitive: Truc.txt et truc.txt sont deux fichiers differents
-- n;'utiliser que: (a-z, A-Z), numbers (0-9), periods (.), underscores (_), and hyphens (-). le premier character ne doit pas etre un '-'
-- PAS d'espace dans le noms de fichiers. C'est EVIL!
-- ne pas utiliser les caracteres speciaux comme: `*, &, %, $, #, @, !,`
-- les fichier cachés debutent par un '.'
-
-Examples to avoid:
-```
-My Project Report (Final Version).pdf  # Contains spaces
-2023_$ales_Data.csv  # Contains a special character
--start-with-hyphen.txt  # Starts with a hyphen
 ```
 
-allez dans le repertoire /home/ubuntu 
+Le prompt change
+```bash
+ubuntu@45f1bbf4d38d:~$
+```
 
-C'est le repoertoire par defaut de l'utilisater ubuntu 
+Le user est ubuntu. Notez aussi que le `#` final est devenu `$`. Le signe `#` indfique que vous travaillez en tant que super user (zone de danger).
 
-Notre container ne contient qu'un utilisteur. C;est aussi l'utilisateur root. 
+Enfin la commande `whoami` (lit. qui suis je?) retourne le nom de l'utilisateur qui est connecté
 
-c'est dasn le epertoire /home/ubuntu  que l'on va travailler.
+![](./../../img/whoami.png)
 
-## 3. File and Directory Operations
+Pour revenir a root:
+```bash 
+exit
+```
+
+### Se deplacer dans les repertoires
+
+Pour se deplacer dans les repertoires on utilise les commandes 
+
+- `pwd`: Path to Working Directory: le repertoire courant 
+- `ls`: liste les fichiers. Utile avec les flags -al et -alh. un alias est souvent disponible : `ll`
+- `cd`: change directory 
+
 Quelques commandes pour les fichers et repertoires:
 
 - Creating directories (mkdir)
@@ -149,83 +198,135 @@ Quelques commandes pour les fichers et repertoires:
 - Removing files and directories (rm, rmdir)
 
 
+### noms de fichiers
 
-## 4. Viewing and Editing Files
+ Il y a des regles à respecter dans le nomage des fichiers et repertoires
+
+- Case sensitive: `Truc.txt` et `truc.txt` sont deux fichiers differents
+- n'utiliser que: (a-z, A-Z), numbers (0-9), periods (.), underscores (_), and hyphens (-). le premier character ne doit pas etre un '-'
+- PAS d'espace dans le noms de fichiers. Vraiment! C'est juste pas cool!
+- Ne pas utiliser les caracteres speciaux comme: `*, &, %, $, #, @, !,`
+- Les fichier cachés débutent par un '.'
+
+Exemples a eviter:
+
+```
+My Project Report (Final Version).pdf  # espaces
+2023_$ales_Data.csv  # caractere special
+-start-with-hyphen.txt  # commence par un -
+```
+
+Allez dans le repertoire /home/, lieu des comptes utilisateurs et faites `ls -al` : 
+
+```bash
+total 20
+drwxr-xr-x 1 root   root   4096 Aug 27 16:06 .
+drwxr-xr-x 1 root   root   4096 Sep 26 10:51 ..
+drwxr-x--- 1 ubuntu ubuntu 4096 Sep 26 13:32 ubuntu
+```
+Le container ne contient qu'un utilisateur: ubuntu. 
+
+```bash
+cd ubuntu
+```
+
+
+## 4. Voir le contenu des fichiers sans les ouvrir
 
 Dans le reportoire /home/ubuntu on a les fichiers suivants ('ls -al'):
 
 ![](./../../img/ubuntu-home-ls.png)
 
+`.bash_logout  .bashrc  .profile`
 
-` .bash_logout  .bashrc  .profile`
+avec `cat`, on peut afficher le contenue de ces fichiers directement dans le terminal.
 
-avec cat, affichez dans le terminal ce que ces fichiers contiennent 
+executez l'un apres l'autre:
 
-on a 
-- # ~/.bash_logout: executed by bash(1) when login shell exits.
+* cat .bashrc
+* cat .bash_logout
+* cat .profile
+
+on a les premieres lignes
 - # ~/.bashrc: executed by bash(1) for non-login shells. Every time you open a new terminal session (without logging in, such as launching a terminal from your desktop)
+- # ~/.bash_logout: executed by bash(1) when login shell exits.
 - # ~/.profile: executed by the command interpreter for login shells.
 
 When you log in to the system (e.g., via SSH, console login, or switching to a virtual console), the shell reads .profile or .bash_profile (depending on the system setup). 
 
-Pour voir les N premieres ou dernieres lignes d'un fichier on utilise  
+Pour voir les N premieres ou N dernieres lignes d'un fichier on utilise  
 - `head -n N <nom du fchier>`
 - `tail -n N <nom du fchier>`
 
-on peut enchainer les comandes avec le symbole pipe '|'
+on peut enchainer les commandes avec le symbole pipe '|'
 
+```bash
 head -n 200 fichier.txt | tail -n 10
+```
 
 Donne les 10 lignes 190 a 199 du fichier 
 
-Pour modifier, editer un fichier on utilise vim.
+Pour modifier, editer un fichier on utilise `vim` ou `nano`.
 
 Mais vim n'est pas inclut par defaut dans ubuntu. On va l'installer plus tard.
 
 #### question 
-mais dans le rep ubuntu on a la config du user ubuntu 
-mais on s'est connecté avec root 
-ou se trouve le .bashrc etc de root ?
 
-answer : dans /root
+dans le repertoire ubuntu on a la config du user ubuntu : .bashrc, .profile etc ...
 
+mais on s'est connecté avec `root`.  ou se trouve donc le .bashrc de root ?
+
+answer : dans le repertoire  `/root` pardi!
+
+
+
+```bash
 cd /root
 ls -al 
+```
 
 donne quelques fichiers
+
+```bash
+root@45f1bbf4d38d:~# ls -al
+total 32
+drwx------ 1 root root 4096 Sep 26 13:32 .
+drwxr-xr-x 1 root root 4096 Sep 26 10:51 ..
+-rw------- 1 root root 1010 Sep 26 14:06 .bash_history
+-rw-r--r-- 1 root root 3106 Apr 22 15:04 .bashrc
+drwx------ 3 root root 4096 Sep 26 13:32 .config
+-rw-r--r-- 1 root root  161 Apr 22 15:04 .profile
+```
+
 dont .bash_history qui contient l'historique des commandes. 
 
-
-#### A vous
-
-Voir le contenu d'un fichier de type texte:
-
-Tout d'abord recuperer le fichier csv avec
-```bash
-wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv 
-```
-C'est un fichier de quelques centaines de tracks de spotify
-
-affichez les 
-- la premiere ligne du fichier 
-- les 10 dernieres lignes du fichier
-- lignes 180 a 199 du fichier
-
 ### Grep
-Autre commande super puissante : grep
+Autre commande super puissante : `grep`
 
+```bash
 grep [OPTION]... PATTERNS [FILE]
+```
 
 par exemple trouver les alias (les racourcis commandes) dans le fichier .bashrc
 
+```bash 
 grep alias .bashrc
+```
 
-donne la liste des alias
+retourne les ligne qui contiennent le mot **alias**
+
+le format generale de grep est 
+
+```bash
+Usage: grep [OPTION]... PATTERNS [FILE]...
+Search for PATTERNS in each FILE.
+Example: grep -i 'hello world' menu.h main.c
+```
 
 
 ## 5. File Permissions and Ownership (30 minutes)
 
-Quand on liste les fichiers on voit ;es permissions fichier
+Quand on liste les fichiers on voit les permissions de fichier
 
 -rw-r--r-- 1 ubuntu ubuntu  220 Mar 31 08:41 .bash_logout
 
@@ -294,7 +395,8 @@ ici sudo  veut dire super user
 
 
 task: on veut recuperer un ficheir online 
-l'utilitare le plus simple est wget. (curl est plus commpliqué, okus complet)
+l'utilitare le plus simple est wget. (curl est plus commpliqué, et plus complet)
+
 mais 
 ```bash
 wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv 
@@ -337,6 +439,32 @@ sudo apt-get install wget
 
 et enfin downloader le fichier 
 
+### A vous
+
+Voir le contenu d'un fichier de type texte:
+
+Tout d'abord récupérer le fichier csv avec wget
+
+```bash
+wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv 
+```
+
+C'est un fichier de quelques centaines de tracks de spotify
+
+En utilisant cat, head et tail ainsi que |, affichez :
+
+- la premiere ligne du fichier 
+- les 10 dernieres lignes du fichier
+- lignes 180 a 199 du fichier
+
+* Avec `grep` trouvez tous les tracks de :
+    * Al Di Meola
+    * Youssou N'Dour
+
+
+* Changez le owner de WorldHits.csv pour ubuntu avec chmod
+* changez les permissions de WorldHits.csv pour que le fichier soit writable par tous le monde: `-rw-rw-rw-`
+
 #### Recap
 
 pour installer quelque chose 
@@ -371,7 +499,7 @@ derniere chose
 
 voir ce qui tourne sur une VM linux avec top et ps
 
-top: donne la liste eds prrocess qui tourne les plus intensif
+top: donne la liste des process qui tourne les plus intensif
 et le load average 
 
 ![](./../../img/ubuntu-top.png)
@@ -386,29 +514,20 @@ ps -ef et ps aux sont les dux config les plus utilisées.
 
 pas grand chose tourne sur cette instance. 
 
+On peut combiner avec grep pour filtrer les process
+
+Par exemple pour trouver les process liés a postgresql, a nginx:
+
+ps aux | grep postgres
+ps aux | grep nginx
+
+la sortie de ps aux est envoyée directement a grep keyword 
 
 
 ## 9. Environment Variables (15 minutes)
-- Viewing environment variables (env, echo $VAR)
-- Setting environment variables
+
 - Understanding PATH
 
-## 10. Basic Shell Scripting (30 minutes)
-- Creating a simple shell script
-- Making scripts executable
-- Running scripts
-
-## 11. Practical Exercise: Setting Up a Web Server (30 minutes)
-- Installing Nginx
-- Configuring a basic website
-- Starting and stopping services
-
-## 12. Conclusion and Q&A (10 minutes)
-- Recap of key concepts
-- Additional resources for further learning
-- Questions and answers
-
-Total time: Approximately 4.5 hours (can be adjusted as needed)
 
 
 # next workshop
