--- a/docs/03/S03.02.lab.nginxserver.md
+++ b/docs/03/S03.02.lab.nginxserver.md
@@ -12,6 +12,7 @@ Tout ce passe dans le terminal!
 
 
 Dans la suite
+
 Alpine utilise /bin/sh et non /bin/bash
 Alpine utilise le package manager apk au lieu de apt-get
 
@@ -43,8 +44,8 @@ quelques questions
 - qui etes vous ?
 - allez dans /home quel est l'autre utilisateur du systeme ?
 - allez dans /root et listez les fichiers
-qu'est ce qui manque par rapport a la distro ubuntu ?
-est ce que ll est definie ?
+qu'est ce qui est different par rapport a la distro ubuntu ?
+est ce que `ll` est definie comme alias ?
 
 On voit bien que la distro alpine est mminimaliste
 
@@ -75,9 +76,11 @@ cd /var/www/html
 
 utilisez wget pour telecharger la page https://fr.wikipedia.org/wiki/Linux
 
-trouver le flag qui permet de specifier le nom ddu fichier 'output
+trouver le flag qui permet de specifier le nom du fichier output
 
-faire en sorte que le fichier dde la page s'appelle inedx.html
+wget --help
+
+faire en sorte que le fichier dde la page s'appelle index.html
 
 ```
 wget -O index.html https://fr.wikipedia.org/wiki/Linux
@@ -98,10 +101,14 @@ echo -e "daemon off;\n\nevents {\n worker_connections 1024;\n}\n\nhttp {\n serve
 nginx
 ```
 
+lister les process lié a nginx avec ps aux et grep
+
 10. Exit the container:
 ```
 exit
 ```
+L'image est configurée. on va maintenant la cloner / copier et lui donner un autre nom que alpine.
+
 
 11. Commit the changes to a new image:
 ```
@@ -114,6 +121,7 @@ docker run -d -p 8080:80 --name my_nginx_server my_nginx_alpine:v1 nginx
 ```
 
 13. Verify the webpage is being served by opening a web browser and navigating to:
+
 ```
 http://localhost:8080
 ```
