--- a/docs/01/S01.01.intro.md
+++ b/docs/01/S01.01.intro.md
@@ -38,14 +38,14 @@ Le contenu du cours est disponible sur:
 * le github : <https://github.com/SkatAI/ynov-docker>
 * et les documents seront mis à disposition sur le moodle de Ynov
 
-Questions, commentaires à [alexis.perrier@ynov.com](mailto:alexis.perrier@ynov.com) ou de via discord.
+Questions, commentaires à [alexis.perrier@ynov.com](mailto:alexis.perrier@ynov.com) ou via discord.
 
 ## Evaluation
 
 * Les labs seront notés
 * Un projet final en classe lors de la dernière après midi.
 
-La note finale sera composée de 50% (les 2 meilleures notes de TD) + 50% (le projet final)
+La note finale sera composée de 50% (les meilleures notes de TD) + 50% (le projet final)
 
 ## Comment organiser votre travail
 
@@ -59,7 +59,13 @@ dedans
 * votre code
 * la data
 
-Ca doit ressembler a ça
+Ca doit ressembler à ça
+
+
+### Le terminal
+On travaille dans le terminal a 95%
+- mac: iTerm
+- Windows: powershell admin ou wsl
 
 ## Scope du cours
 
@@ -96,16 +102,21 @@ todo : lien vers google form
 
 * votre experience avec Docker ? (en quelques mots, vous l'utilisez au quotidien, vous l'avez utilisé dans es projets, aucune idee de ce que c'est )
 
-* est ce que Docker Desktop est installé sur votre machine
+* est ce que Docker Desktop est installé sur votre machine ?
 * Savez vous accèder a la ligne de commande dans un terminal,  powershell, WSL, ..
-* Quels vos languages de programmation  prferes ?
+* Quels vos languages de programmation  préferés ?
 * test en python
+
+### Stack
+Vous travaillez avec quel stack, si vous etes en alternance 
 
 ### Aspirations
 
 Qu'est ce que vous voulez apprendre dans ce cours ?
+
 Qu'est ce que vous voulez faire professionnellement ?
 
+Une techno particuliere que vous souhaitez maitriser ? en dehors de Docker ?
 ### LLM
 
 Vous utilisez chatGPT ou equivalent
