--- a/docs/01/S01.02.pourquoi-docker.md
+++ b/docs/01/S01.02.pourquoi-docker.md
@@ -3,7 +3,7 @@
 - Docker c'est quoi ?
 - A quoi ca sert ?
 
-- Et surtout pourquoi c'est important professionnellement
+- Et pourquoi c'est important professionnellement
 
 ## Docker pourquoi ?
 
