--- a/docs/01/S01.03.install.md
+++ b/docs/01/S01.03.install.md
@@ -6,9 +6,8 @@ Hello worl
 
 Commençons par le plus important
 
-<div style="background-color: #f0f0f0; padding: 10px; border-left: 2px dotted #F00;  ">
-Installer Docker sur vos machines
-</div>
+
+### Installer Docker sur vos machines
 
 Le plus simple est d'installer l'application **Docker Desktop** qui offre une interface (UI) simple et qui installera tout ce qui est nécessaire pour vous permettre d'exécuter aussi ```docker``` en ligne de commande.
 
